--- a/src/islenska/config/BinErrata.conf
+++ b/src/islenska/config/BinErrata.conf
@@ -34,6 +34,8 @@ slæmur              kk  alm
 Tala                kvk ism
 versta              kvk alm
 versti              kk  alm
+versta              kvk mæl
+versti              kk  mæl
 Vilji               kk  ism
 Eina                kvk ism
 Þuríður             kvk örn
