Stored all word forms alongside lemmas

--- a/src/islenska/config/BinErrata.conf
+++ b/src/islenska/config/BinErrata.conf
@@ -12,7 +12,7 @@
 
 [bin_deletions]
 
-# Word stem/ordfl/fl to delete when constructing ord.compressed
+# Word lemma/ordfl/fl to delete when constructing ord.compressed
 
 Á                   kvk göt
 Aríi                kk  ffl
@@ -56,7 +56,7 @@ Salómonsdómur       kk  alm # Á að rita 'salómonsdómur', sem er í Vocab.c
 
 [bin_errata]
 
-# Errata in the fl field of word stems in BÍN, to be corrected
+# Errata in the fl field of word lemmas in BÍN, to be corrected
 # when constructing ord.compressed
 
 # Lönd með ranga flokkun
