--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -31,7 +31,7 @@ jobs:
     - name: Type check with mypy
       run: |
         if [ "${{ matrix.python-version }}" == "3.6" ]; then python -m pip install mypy; fi
-        if [ "${{ matrix.python-version }}" == "3.6" ]; then mypy --python-version=3.6 src/reynir; fi
+        if [ "${{ matrix.python-version }}" == "3.6" ]; then mypy --python-version=3.6 src/islenska; fi
     - name: Build *.dawg.bin
       run: |
         python tools/dawgbuilder.py
