--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -37,6 +37,10 @@ jobs:
         python tools/dawgbuilder.py
     - name: Build compressed.bin
       run: |
+        wget -O src/islenska/resources/KRISTINsnid.csv.zip https://bin.arnastofnun.is/django/api/nidurhal/?file=KRISTINsnid.csv.zip
+        unzip src/islenska/resources/KRISTINsnid.csv.zip
+        rm src/islenska/resources/KRISTINsnid.csv.zip
+        rm src/islenska/resources/KRISTINsnid.csv.sha256sum
         python tools/binpack.py
     - name: Test with pytest
       run: |
