More CI modifications

--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -37,10 +37,9 @@ jobs:
         python tools/dawgbuilder.py
     - name: Build compressed.bin
       run: |
-        wget -O src/islenska/resources/KRISTINsnid.csv.zip https://bin.arnastofnun.is/django/api/nidurhal/?file=KRISTINsnid.csv.zip
+        wget -q -O src/islenska/resources/KRISTINsnid.csv.zip https://bin.arnastofnun.is/django/api/nidurhal/?file=KRISTINsnid.csv.zip
         unzip src/islenska/resources/KRISTINsnid.csv.zip
-        rm src/islenska/resources/KRISTINsnid.csv.zip
-        rm src/islenska/resources/KRISTINsnid.csv.sha256sum
+        # rm src/islenska/resources/KRISTINsnid.csv.zip
         python tools/binpack.py
     - name: Test with pytest
       run: |
