--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -38,7 +38,7 @@ jobs:
     - name: Build compressed.bin
       run: |
         wget -q -O src/islenska/resources/KRISTINsnid.csv.zip https://bin.arnastofnun.is/django/api/nidurhal/?file=KRISTINsnid.csv.zip
-        unzip -d src/islenska/resources/ src/islenska/resources/KRISTINsnid.csv.zip
+        unzip -q -d src/islenska/resources/ src/islenska/resources/KRISTINsnid.csv.zip
         rm src/islenska/resources/KRISTINsnid.csv.zip
         rm src/islenska/resources/KRISTINsnid.csv.sha256sum
         python tools/binpack.py
