Fixes in setup.py and installation scripts

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,12 +1,14 @@
 graft src
 prune src/islenska/__pycache__
 prune src/islenska/.mypy_cache
+prune test
 exclude src/islenska/_bin.cpp
 include src/islenska/resources/ordalisti-all.dawg.bin
 include src/islenska/resources/ordalisti-prefixes.dawg.bin
 include src/islenska/resources/ordalisti-suffixes.dawg.bin
-include src/islenska/resources/ord.compressed
+include src/islenska/resources/compressed.bin
 exclude src/islenska/resources/*.csv
 exclude src/islenska/resources/*.txt
+exclude src/islenska/resources/KRISTINsnid.*
 exclude src/islenska/*.o
 exclude src/islenska/*.so
