Updated attribute names in BinMeaning tuple

--- a/src/islenska/config/BinErrata.conf
+++ b/src/islenska/config/BinErrata.conf
@@ -12,7 +12,7 @@
 
 [bin_deletions]
 
-# Word lemma/ordfl/fl to delete when constructing ord.compressed
+# Word lemma/ofl/fl to delete when constructing ord.compressed
 
 Á                   kvk göt
 Aríi                kk  ffl
