--- a/src/islenska/config/Prefs.conf
+++ b/src/islenska/config/Prefs.conf
@@ -218,7 +218,7 @@ vöxtunum kvk < kk
 
 # select distinct o.ordmynd,o.stofn from ord o
 #     where exists(
-#         select * from ord k where k.ordfl=o.ordfl and k.ordmynd=o.ordmynd
+#         select * from ord k where k.ofl=o.ofl and k.ordmynd=o.ordmynd
 #             and k.stofn <> o.stofn limit 1)
 #     order by o.ordmynd,o.stofn;
 
