Edited comments in BinErrata.conf

--- a/src/islenska/config/BinErrata.conf
+++ b/src/islenska/config/BinErrata.conf
@@ -5,14 +5,16 @@
 
 # BinErrata.conf
 
-# This file is read in bincompress.py and contains
+# This file is read in binpack.py and contains
 # instructions for deleting and editing raw BÍN data
-# before they are incorporated in the ord.compressed file.
+# before they are incorporated in the compressed.bin file.
 
+# These edits are only visible from the GreynirBin class,
+# not the main Bin class of BinPackage.
 
 [bin_deletions]
 
-# Word lemma/ofl/fl to delete when constructing ord.compressed
+# ord/ofl/hluti that should not be visible in GreynirBin
 
 Á                   kvk göt
 Aríi                kk  ffl
@@ -56,8 +58,8 @@ Salómonsdómur       kk  alm # Á að rita 'salómonsdómur', sem er í Vocab.c
 
 [bin_errata]
 
-# Errata in the fl field of word lemmas in BÍN, to be corrected
-# when constructing ord.compressed
+# Errata in the fl field of word lemmas in BÍN,
+# visible via the GreynirBin class
 
 # Lönd með ranga flokkun
 
