--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -27,6 +27,7 @@ jobs:
     - name: Install BinPackage
       run: |
         python -m pip install --upgrade pip wheel setuptools
+        python -m pip install types-setuptools
         python -m pip install -e .
     - name: Type check with mypy
       run: |
