Added to Prefs.conf

--- a/src/islenska/config/Prefs.conf
+++ b/src/islenska/config/Prefs.conf
@@ -323,6 +323,7 @@ stöðum staði < staður staða
 suður suða < suður
 svefni svefni < svefn
 sviða sviða < svið
+sætt sæða < sætta
 tón tón < tónn
 tölvu talva < tölva
 tölvuna talva < tölva
