--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -16,7 +16,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest]
-        python-version: [3.6, 3.7, 3.8, 3.9, pypy-3.6]
+        python-version: ['3.7', '3.8', '3.9', '3.10', 'pypy-3.7']
 
     steps:
     - uses: actions/checkout@v2
@@ -29,10 +29,10 @@ jobs:
         python -m pip install --upgrade pip wheel setuptools
         python -m pip install types-setuptools
         python -m pip install -e .
-    - name: Type check with mypy
-      run: |
-        if [ "${{ matrix.python-version }}" == "3.6" ]; then python -m pip install mypy; fi
-        if [ "${{ matrix.python-version }}" == "3.6" ]; then mypy --python-version=3.6 src/islenska; fi
+    # - name: Type check with mypy
+    #   run: |
+    #     python -m pip install mypy
+    #     mypy --python-version=3.7 src/islenska
     - name: Build *.dawg.bin
       run: |
         python tools/dawgbuilder.py
