--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -22,7 +22,7 @@ jobs:
       # Install Python used to run cibuildwheel
       - uses: actions/setup-python@v3
         with:
-          python-version: '3.9'
+          python-version: '3.10'
 
       # Fetch BÍN source data from Árnastofnun
       - name: Fetch BÍN source data and build compressed.bin
@@ -41,13 +41,13 @@ jobs:
         shell: bash
 
       - name: Install cibuildwheel
-        run: python -m pip install --upgrade wheel setuptools pip cibuildwheel==2.11.1
+        run: python -m pip install --upgrade wheel setuptools pip cibuildwheel
 
       - name: Build wheels
         run: python -m cibuildwheel --output-dir wheelhouse
         # Options (https://cibuildwheel.readthedocs.io/en/stable/options/)
         env:
-          CIBW_SKIP: cp36-* cp311-* *musllinux*
+          CIBW_SKIP: cp36-* *musllinux*
           CIBW_BEFORE_BUILD_MACOS: python3 -m pip install --upgrade setuptools wheel cffi
           CIBW_ARCHS_MACOS: "x86_64 arm64"
           CIBW_ARCHS_WINDOWS: "AMD64"
