Added 'snimmhendis'; fixed type annotations

--- a/src/islenska/config/BinPackage.conf
+++ b/src/islenska/config/BinPackage.conf
@@ -1,7 +1,7 @@
 #
-# GreynirPackage.conf
+# BinPackage.conf
 #
-# Configuration file for GreynirPackage ('reynir' on PyPI)
+# Configuration file for BinPackage ('islenska' on PyPI)
 #
 # Copyright (C) 2022 Miðeind ehf
 #
