add and remove words from BÍN for GreynirCorrect

--- a/src/islenska/config/BinErrata.conf
+++ b/src/islenska/config/BinErrata.conf
@@ -53,7 +53,9 @@ Von                 kvk ism
 Evuklæði            hk  alm # Á að rita 'evuklæði', sem er í Vocab.conf
 Salómonsdómur       kk  alm # Á að rita 'salómonsdómur', sem er í Vocab.conf
 Öryggisráð          hk  fyr # Á að rita 'öryggisráð'
-
+Fyrirtækjaþjónustan kvk fyr
+Fyrirtækjaráðgjöf   kvk fyr
+Kreditkort          hk  fyr
 ánægja              so  alm
 
 [bin_errata]
