--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -48,13 +48,13 @@ jobs:
         run: python -m cibuildwheel --output-dir wheelhouse
         # Options (https://cibuildwheel.readthedocs.io/en/stable/options/)
         env:
-          CIBW_SKIP: cp36-* *musllinux*
+          CIBW_SKIP: cp36-* cp37-* pp37-* *musllinux*
           CIBW_BEFORE_BUILD_MACOS: python3 -m pip install --upgrade setuptools wheel cffi
           CIBW_ARCHS_MACOS: "x86_64 arm64"
           CIBW_ARCHS_WINDOWS: "AMD64"
           CIBW_ARCHS_LINUX: "x86_64"
           CIBW_BUILD_FRONTEND: "build"
-          # CIBW_PROJECT_REQUIRES_PYTHON: ">=3.7"
+          # CIBW_PROJECT_REQUIRES_PYTHON: ">=3.8"
 
       - uses: actions/upload-artifact@v3
         with:
