--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -16,7 +16,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest]
-        python-version: ['3.9', '3.10', '3.11', 'pypy-3.9', 'pypy-3.10']
+        python-version: ['3.8', '3.9', '3.10', '3.11', 'pypy-3.9', 'pypy-3.10']
 
     steps:
     - uses: actions/checkout@v2
@@ -31,8 +31,8 @@ jobs:
         python -m pip install -e .
     - name: Type check with mypy
       run: |
-        if [ "${{ matrix.python-version }}" == "3.9" ]; then python -m pip install mypy; fi
-        if [ "${{ matrix.python-version }}" == "3.9" ]; then mypy --python-version=3.9 src/islenska; fi
+        if [ "${{ matrix.python-version }}" == "3.8" ]; then python -m pip install mypy; fi
+        if [ "${{ matrix.python-version }}" == "3.8" ]; then mypy --python-version=3.8 src/islenska; fi
     - name: Build *.dawg.bin
       run: |
         python tools/dawgbuilder.py
