--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -38,7 +38,7 @@ jobs:
         python tools/dawgbuilder.py
     - name: Build compressed.bin
       run: |
-        wget -q -O src/islenska/resources/KRISTINsnid.csv.zip 'https://greynir.is/static/files/KRISTINsnid.csv.zip'
+        wget -q -O src/islenska/resources/KRISTINsnid.csv.zip 'https://bin.arnastofnun.is/django/api/nidurhal/?file=KRISTINsnid.csv.zip'
         unzip -q -d src/islenska/resources/ src/islenska/resources/KRISTINsnid.csv.zip
         rm src/islenska/resources/KRISTINsnid.csv.*
         python tools/binpack.py
