--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -19,34 +19,39 @@ jobs:
         python-version: ['3.8', '3.9', '3.10', '3.11', '3.12', 'pypy-3.9', 'pypy-3.10']
 
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v4
     - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v2
+      uses: actions/setup-python@v5
       with:
         python-version: ${{ matrix.python-version }}
+
     - name: Install BinPackage
       run: |
-        python -m pip install --upgrade pip wheel setuptools pytest
-        python -m pip install types-setuptools
+        python -m pip install --upgrade pip wheel setuptools pytest types-setuptools
         python -m pip install -e .
+
     - name: Type check with mypy
       run: |
         if [ "${{ matrix.python-version }}" == "3.8" ]; then python -m pip install mypy; fi
         if [ "${{ matrix.python-version }}" == "3.8" ]; then mypy --python-version=3.8 src/islenska; fi
+
     - name: Build *.dawg.bin
       run: |
         python tools/dawgbuilder.py
+
     - name: Build compressed.bin
       run: |
         wget -q -O src/islenska/resources/KRISTINsnid.csv.zip 'https://bin.arnastofnun.is/django/api/nidurhal/?file=KRISTINsnid.csv.zip'
         unzip -q -d src/islenska/resources/ src/islenska/resources/KRISTINsnid.csv.zip
         rm src/islenska/resources/KRISTINsnid.csv.*
         python tools/binpack.py
+
     - name: Test with pytest
       run: |
         python -m pytest
+
     - name: Slack notification
-      uses: 8398a7/action-slack@v2
+      uses: 8398a7/action-slack@v3
       with:
         status: ${{ job.status }}
         author_name: Integration Testing (Python ${{ matrix.python-version }})
