--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -16,7 +16,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest]
-        python-version: ['3.9', '3.10', '3.11', '3.12', 'pypy-3.9', 'pypy-3.10']
+        python-version: ['3.9', '3.10', '3.11', '3.12'] #, 'pypy-3.9', 'pypy-3.10']
 
     steps:
     - uses: actions/checkout@v4
@@ -24,6 +24,9 @@ jobs:
       uses: actions/setup-python@v5
       with:
         python-version: ${{ matrix.python-version }}
+
+    - name: Install build tools
+      run: sudo apt-get update && sudo apt-get install -y build-essential g++ python3-dev
 
     - name: Install BinPackage
       run: |
