--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -16,7 +16,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest]
-        python-version: ['pypy-3.9', 'pypy-3.10'] # ['3.9', '3.10', '3.11', '3.12'] #
+        python-version: ['3.9', '3.10', '3.11', '3.12', 'pypy-3.9', 'pypy-3.10']
 
     steps:
     - uses: actions/checkout@v4
@@ -25,12 +25,9 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
 
-    - name: Install build tools
-      run: sudo apt-get update && sudo apt-get install -y build-essential g++ python3-dev
-
     - name: Install BinPackage
       run: |
-        python -m pip install --upgrade pip wheel setuptools pytest types-setuptools packages
+        python -m pip install --upgrade pip wheel setuptools pytest types-setuptools
         python -m pip install -e .
 
     - name: Type check with mypy
