--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ version = "1.0.3"
 description = "The vocabulary of modern Icelandic, encapsulated in a Python package"
 authors = [{ name = "Miðeind ehf.", email = "mideind@mideind.is" }]
 maintainers = [{ name = "Miðeind ehf.", email = "mideind@mideind.is" }]
-readme = { file = "README.rst", content-type = "text/x-rst" }
+readme = { file = "README.md", content-type = "text/markdown" }
 license = { text = "MIT License" }
 keywords = ["nlp", "icelandic", "language", "vocabulary", "dictionary"]
 classifiers = [
