CI testing on Python 3.14 and PyPy 3.11, explicitly support 3.14 in metadata, ruff for linting

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,8 @@ classifiers = [
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
+    "Programming Language :: Python :: 3.13",
+    "Programming Language :: Python :: 3.14",
     "Programming Language :: Python :: Implementation :: CPython",
     "Programming Language :: Python :: Implementation :: PyPy",
     "Topic :: Software Development :: Libraries :: Python Modules",
@@ -47,20 +49,10 @@ where = ["src"]
 [tool.setuptools.package-data]
 where = ["src"]
 
-[tool.pytest.ini_options]
-filterwarnings = [
-    # Ignore deprecation warnings in libraries, their problem not ours
-    # "ignore::DeprecationWarning",
-]
-
 [tool.ruff]
-line-length = 88
-
-[tool.black]
 line-length = 88
 
 [tool.isort]
 # This forces these imports to placed at the top
 known_future_library = ["__future__", "typing", "typing_extensions"]
-profile = "black"
 line_length = 88
