--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -16,7 +16,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest]
-        python-version: ['3.9', '3.10', '3.11', '3.12', '3.13.0-rc.1', 'pypy-3.9', 'pypy-3.10']
+        python-version: ['3.9', '3.13', '3.14.0-beta.4', 'pypy-3.9', 'pypy-3.10', 'pypy-3.11']
 
     steps:
     - uses: actions/checkout@v4
@@ -27,8 +27,9 @@ jobs:
 
     - name: Install BinPackage
       run: |
-        python -m pip install --upgrade pip wheel setuptools pytest types-setuptools
-        python -m pip install -e .
+        python -m pip install uv
+        uv pip install --system --upgrade wheel setuptools pytest types-setuptools packaging
+        uv pip install --system -e .
 
     - name: Type check with mypy
       run: |
