--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -10,8 +10,24 @@ on:
     branches: [ "*" ]
 
 jobs:
-  build:
+  prepare-cache:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - name: Cache KRISTINsnid.csv.zip
+        id: cache-kristin
+        uses: actions/cache@v4
+        with:
+          path: src/islenska/resources/KRISTINsnid.csv.zip
+          key: kristin-csv-zip-v1
+      - name: Download KRISTINsnid.csv.zip
+        if: steps.cache-kristin.outputs.cache-hit != 'true'
+        run: |
+          mkdir -p src/islenska/resources
+          wget -q -O src/islenska/resources/KRISTINsnid.csv.zip 'https://bin.arnastofnun.is/django/api/nidurhal/?file=KRISTINsnid.csv.zip'
 
+  build:
+    needs: prepare-cache
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
@@ -24,6 +40,12 @@ jobs:
       uses: actions/setup-python@v5
       with:
         python-version: ${{ matrix.python-version }}
+
+    - name: Restore cached KRISTINsnid.csv.zip
+      uses: actions/cache@v4
+      with:
+        path: src/islenska/resources/KRISTINsnid.csv.zip
+        key: kristin-csv-zip-v1
 
     - name: Install BinPackage
       run: |
@@ -47,7 +69,6 @@ jobs:
 
     - name: Build compressed.bin
       run: |
-        wget -q -O src/islenska/resources/KRISTINsnid.csv.zip 'https://bin.arnastofnun.is/django/api/nidurhal/?file=KRISTINsnid.csv.zip'
         unzip -q -d src/islenska/resources/ src/islenska/resources/KRISTINsnid.csv.zip
         python tools/binpack.py
 
