--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,7 @@
+[build-system]
+requires = ["setuptools>=61.0", "cffi>=1.15.1"]
+build-backend = "setuptools.build_meta"
+
 [project]
 name = "islenska"
 version = "1.0.3"
@@ -43,11 +47,14 @@ dev = ["pytest"]
 
 # *** Configuration of tools ***
 
+[tool.setuptools]
+include-package-data = true
+
 [tool.setuptools.packages.find]
 where = ["src"]
 
 [tool.setuptools.package-data]
-where = ["src"]
+islenska = ["py.typed"]
 
 [tool.ruff]
 line-length = 88
